@@ -18,8 +18,9 @@ git-annex (5.20150508.2) UNRELEASED; urgency=medium
     running at once.
   * Stale transfer lock and info files will be cleaned up automatically
     when get/unused/info commands are run.
-  * unused: Add --used option, which can specify a set of refs to consider
-    used, rather than the default of considering all refs used.
+  * unused: Add --used option and annex.used-refspec, which can specify
+    a set of refs to consider used, rather than the default of considering
+    all refs used.
 
  -- Joey Hess <id@joeyh.name>  Mon, 11 May 2015 12:45:06 -0400
 
